--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "ConnectionStrings": {
-      "MyDatabaseConnection": "Server=DESKTOP-N05EULC\\SQLEXPRESS;Database=PRIORITY_WWD;Trusted_Connection=True;"
-    },
-    "AllowedHosts": "*"
-  }
+  "ConnectionStrings": {
+    "MyDatabaseConnection": "Server=tcp:priority-wwd-server.database.windows.net,1433;Initial Catalog=PRIORITY_WWD;Persist Security Info=False;User ID=junaid;Password=Pakistan@watan19;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "AllowedHosts": "*"
+}
+
