--- a/CargoApi.csproj
+++ b/CargoApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>3e4870d4-9801-4e0a-b954-69986df4058f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
