major changes on model and controller side

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MyDatabaseConnection": "Server=tcp:serverpwswarehouse.database.windows.net,1433;Initial Catalog=pwswarehouseDB;Persist Security Info=False;User ID=pwswarehouse;Password=Priority1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "MyDatabaseConnection": "Server=DESKTOP-N05EULC\\SQLEXPRESS;Initial Catalog=PRIORITY_WWD;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
