major changes related to backend

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,11 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "MyDatabaseConnection": "Server=DESKTOP-N05EULC\\SQLEXPRESS;Initial Catalog=PRIORITY_WWD;Trusted_Connection=True;"
+    "MyDatabaseConnection": "Server=tcp:serverpwswarehouse.database.windows.net,1433;Initial Catalog=pwswarehouseDB;Persist Security Info=False;User ID=pwswarehouse;Password=Priority1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
-//"MyDatabaseConnection": "Server=tcp:priority-wwd-server.database.windows.net,1433;Initial Catalog=PRIORITY_WWD;Persist Security Info=False;User ID=junaid;Password=Pakistan@watan19;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
 //"Server=DESKTOP-N05EULC\\SQLEXPRESS;Initial Catalog=PRIORITY_WWD;Trusted_Connection=True;"
 //    "MyDatabaseConnection": "Server=tcp:serverpwswarehouse.database.windows.net,1433;Initial Catalog=pwswarehouseDB;Persist Security Info=False;User ID=pwswarehouse;Password=Priority1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
